--- a/index.html
+++ b/index.html
@@ -2,18 +2,62 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+<!--    <link rel="stylesheet" href="https://herman-the-worm.github.io/homepage/assets/stylesheets/base.css">-->
+    <link rel="stylesheet" href="./assets/stylesheets/base.css">
     <title>Résumé</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135348958-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-135348958-1');
+    </script>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="My very own personal website.">
+    <meta name="google-site-verification" content="JSXHc5R4b0LTgmCgl1pO59m6T8NOPE4p3oEkQdx-cB8">
+    <meta name="google" content="nositelinkssearchbox">
+    <meta name="google" content="notranslate">
+    <meta name="googlebot" content="index,follow">
+    <meta name="robots" content="index,follow">
+    <meta name="subject" content="This is just a résumé.">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="white">
+    <meta property="og:description" content="&mdash; Hello! I'm a full stack developer with a background in IT Security and Azure with 3 years experience. I graduated from LDS Business college with Cyber Security degree and Software Engineering degree from BYU Idaho in 2020. I strive to deliver high quality code and provide only best solutions to my customers which are priced right.">
+    <meta property="og:image:alt" content="Screenshot of the homepage">
+    <meta property="og:image:height" content="1800">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="2880">
+    <meta property="og:image" content="">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="Herman Kravchenko &mdash; Résumé">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hermankravchenko.com/">
+    <base href="http://localhost:5000">
+    <title>Herman Kravchenko &mdash; Résumé</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/favicon-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./assets/images/favicon-512x512.png">
+    <link rel="apple-touch-icon" href="./assets/images/apple-touch-icon.png">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="me" href="https://www.fb.com/hermankrav" type="text/html">
+    <link rel="me" href="mailto:herman.kravchenko@gmail.com">
+    <link rel="me" href="tel:+380935308893">
   </head>
   <body>
     <main>
       <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: black;">
           <!-- Content -->
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
                 <!-- Avatar -->
+                <div class="avatar-wrapper">
+                  <object class="avatar" data="./assets/images/avatar.svg" role="img" aria-label="My profile picture"></object>
+                </div>
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
@@ -61,7 +105,8 @@
                   </div>
                   <div class="sixteen wide column">
                     <!-- Intro -->
-                    <p>I'm the most successful person ever to run for the presidency, by far. Nobody's ever been more successful than me. I'm the most successful person ever to run. Ross Perot isn't successful like me. Romney ― I have a Gucci store that's worth more than Romney. Sorry losers and haters, but my IQ is one of the highest ― and you all know it! Please don't feel so stupid or insecure, it's not your fault.</p>
+                    <h2>Résumé</h2>
+                    <p>&mdash; Hello! I'm a full stack developer with a background in IT Security and Azure with 3 years experience. I graduated from LDS Business college with Cyber Security degree and Software Engineering degree from BYU Idaho in 2020. I strive to deliver high quality code and provide only best solutions to my customers which are priced right.</p>
                   </div>
                 </div>
               </div>
@@ -74,16 +119,86 @@
             <div class="row">
               <div class="ten wide column">
                 <!-- Experience -->
+                <h3>Experience</h3>
+                <h6>Recent</h6>
+                <!-- Timeline (recent events) -->
+                <ul class="timeline">
+                  <!-- Events -->
+                </ul>
+                <h6>Back then</h6>
+                <!-- Timeline (older events) -->
+                <ul class="timeline">
+                  <!-- Events -->
+                </ul>
               </div>
               <div class="six wide column">
                 <!-- Languages -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small"><a href="/uk-ua" hreflang="uk" rel="alternate" class="language" lang="uk">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span></a> <a href="/ru-ru" hreflang="ru" rel="alternate" class="language" lang="ru">&#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span></a> <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                </section>
                 <!-- Skills -->
+                <section>
+                  <h3>Skills</h3>
+                  <p class="tags small">HTML CSS JS PHP BOILERPLATE BOOTSTRAP <span class="nowrap">SEMANTIC UI</span> LESS SASS JQUERY ANGULARJS REACT REDUX LODASH GRUNT GULP BOWER WEBPACK NODEJS NPM <span class="nowrap">MICROSOFT OFFICE</span> PHOTOSHOP ILLUSTRATOR DELPHI VB VBA VBSCRIPT LINUX WINDOWS MACOS MYSQL POSTGRESQL MICROSOFT SQL DB2 CCNA ITIL</p>
+                </section>
                 <!-- Character -->
+                <section>
+                  <h3>Character</h3>
+                  <p class="tags small">EXPLORER STRAIGHTFORWARD <a href="https://www.16personalities.com/entp-personality" rel="external">DEBATER</a> DEVOTED PEDANTIC AGNOSTIC CONTENTIOUS PROCRASTINATOR RELEVANT EMPATHETIC STORYTELLER CONFIDENT CONSISTENT CHALLENGING</p>
+                </section>
                 <!-- Likes -->
+                <section>
+                  <h3>Likes&#x1f603;</h3>
+                  <p class="tags small">HUMOUR PATIENCE DOGS MOVIES AAPL DEMOCRACY <span class="nowrap">FC BARCELONA</span> JÄGERMEISTER LVIV FRISBEE <button id="midnightblue" class="color midnightblue">MIDNIGHT BLUE</button> ELECTROPOP CUCINA ITALIANA ‘80S SELF-EDUCATION <button id="meh"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M576 256c0 100.586-53.229 189.576-134.123 239.04-7.532 4.606-17.385 2.241-21.997-5.304-4.609-7.539-2.235-17.388 5.304-21.997C496.549 424.101 544 345.467 544 256c0-89.468-47.452-168.101-118.816-211.739-7.539-4.609-9.913-14.458-5.304-21.997 4.608-7.539 14.456-9.914 21.997-5.304C522.77 66.424 576 155.413 576 256zm-96 0c0-66.099-34.976-124.572-88.133-157.079-7.538-4.611-17.388-2.235-21.997 5.302-4.61 7.539-2.236 17.388 5.302 21.998C418.902 152.963 448 201.134 448 256c0 54.872-29.103 103.04-72.828 129.779-7.538 4.61-9.912 14.459-5.302 21.998 4.611 7.541 14.462 9.911 21.997 5.302C445.024 380.572 480 322.099 480 256zm-138.14-75.117c-7.538-4.615-17.388-2.239-21.998 5.297-4.612 7.537-2.241 17.387 5.297 21.998C341.966 218.462 352 236.34 352 256s-10.034 37.538-26.841 47.822c-7.538 4.611-9.909 14.461-5.297 21.998 4.611 7.538 14.463 9.909 21.998 5.297C368.247 314.972 384 286.891 384 256s-15.753-58.972-42.14-75.117zM256 88.017v335.964c0 21.436-25.942 31.999-40.971 16.971L126.059 352H24c-13.255 0-24-10.745-24-24V184c0-13.255 10.745-24 24-24h102.059l88.971-88.954C230.037 56.038 256 66.551 256 88.017zm-32 19.311l-77.659 77.644A24.001 24.001 0 0 1 129.372 192H32v128h97.372a24.001 24.001 0 0 1 16.969 7.028L224 404.67V107.328z"/></svg> MEH
+                    <audio preload="none">
+                      <source src="./assets/sounds/meh.mp3" type="audio/mpeg">
+                    </audio>
+                  </button> <span class="nowrap">ATTENTION TO DETAILS</span> GRAMMAR SPELLCHECK SEMANTICS MINI-SERIES <span class="nowrap">RYAN GOSLING</span> <span class="nowrap">EMMA STONE</span> ​<span class="nowrap">CURAPROX 5460</span></p>
+                </section>
                 <!-- Dislikes -->
+                <section>
+                  <h3>Dislikes&#x1f61e;</h3>
+                  <p class="tags small"><span class="nowrap">OWN BAD HABITS</span> POLITICS RACISM ASS-KISSERS VODKA INCOMPETENCE ARROGANCE ENVY GOLF <button id="chartreuse" class="color chartreuse">CHARTREUSE</button> INSECTS METRO PREJUDICE REALITY-SHOWS JŪRMALA</p>
+                </section>
                 <!-- Wants -->
+                <section>
+                  <h3>Wants&#x1f97a;</h3>
+                  <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY SCHEDULE</span><span class="tag">TO READ MORE</span><span class="tag">TO OPEN A CAFÉ</span><span class="tag">TO BE BRAVE</span><span class="tag">TO BECOME A SUPERHERO</span><span class="tag">TO LISTEN AND LEARN</span></p>
+                </section>
                 <!-- Education -->
+                <section>
+                  <h3>Education</h3>
+                  <ul class="timeline">
+                    <li>
+                      <div><em>Every day</em></div>
+                      <p class="tags bulleted">
+                        <span class="tag"><a href="https://frontendfront.com/" rel="external"><strong>Front-End Front</strong></a></span><span class="tag"><a href="https://dribbble.com/" rel="external"><strong>Dribbble</strong></a></span><span class="tag"><a href="https://goodui.org/" rel="external"><strong>GoodUI</strong></a></span><span class="tag"><a href="https://egghead.io/" rel="external"><strong>egghead.io</strong></a></span><span class="tag"><a href="https://theverge.com/" rel="external"><strong>The Verge</strong></a></span><span class="tag"><a href="https://uncrate.com/" rel="external"><strong>Uncrate</strong></a></span>
+                      </p>
+                    </li>
+                    <li>
+                      <div><em>December 2005 &ndash; April 2006</em></div>
+                      <div><strong>Certificates of CCNA Course Completion</strong> at <a href="https://www.netacad.com/" rel="external"><strong>Cisco Networking Academy Program</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> September 2003 &ndash; 30<sup>th</sup> June 2008</em></div>
+                      <div><strong>Bachelor's degree</strong> in <strong>computer science</strong> at <a href="http://tntu.edu.ua//?p=en/home" rel="external"><strong>Ternopil National Technical University</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> October 1995 &ndash; 23<sup>rd</sup> May 1999</em></div>
+                      <div><strong>Certificate of graduation</strong> at <strong>Ternopil Art School for Children</strong></div>
+                    </li>
+                    <li>
+                      <div><em>1<sup>st</sup> September 1993 &ndash; 21<sup>st</sup> June 2003</em></div>
+                      <div><strong>Certificate of graduation</strong> at <strong>№20 Middle School of General Education</strong></div>
+                    </li>
+                  </ul>
+                </section>
                 <!-- Articles -->
+                <section>
+                  <h3>Articles</h3>
+                  <p>None published <sup><em>yet</em></sup></p>
+                </section>
               </div>
             </div>
           </div>
