attempt to fix spelling again

--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
                     </li>
                     <li>
                       <div><em>JAN 2018 &ndash; DEC 2020</em></div>
-                      <div><strong>Bachelor's degree </strong> in<a href="https://www.byui.edu/ " rel="external"><strong> BYU Idaho University, Rexburh, Idaho</strong></a></div>
+                      <div><strong>Bachelor's degree </strong> in<a href="https://www.byui.edu/ " rel="external"><strong>&ensp;BYU Idaho</strong></a></div>
                     </li>
                     <li>
                       <div><em> AUG 2017&ndash; APR 2020</em></div>
-                      <div><strong>Associate's degree</strong> in <strong>cyber security</strong> at <a href="http://ldsbc.edu" rel="external"><strong>Ensign College (formerly LDS BUSINESS COLLEGE in SLC, UT) </strong></a></div>
+                      <div><strong>Associate's degree</strong> in <strong>cyber security</strong> at <a href="http://ldsbc.edu" rel="external"><strong>Ensign College ( formerly LDSBC ) </strong></a></div>
                     </li>
                   </ul>
                 </section>
