fixed a type on the degree and added a link to the eDiploma

--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                     </li>
                     <li>
                       <div><em>JAN 2018 &ndash; DEC 2020</em></div>
-                      <div><strong>Bachelor's degree </strong> in<a href="https://www.byui.edu/ " rel="external"><strong>&ensp;BYU Idaho</strong></a></div>
+                      <div><strong>Bachelor's degree </strong> in<a href="https://www.byui.edu/ " rel="external"><strong>Software Engineering&ensp;BYU Idaho</strong></a></div>
+                      <div>eDiploma <a href="./assets/documents/596217_eDiploma.pdf"><strong> Click Me! </strong></a></div>
                     </li>
                     <li>
                       <div><em> AUG 2017&ndash; APR 2020</em></div>
