changes made so html can  be with no errors

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    
 <!--    <link rel="stylesheet" href="https://herman-the-worm.github.io/homepage/assets/stylesheets/base.css">-->
-    <link rel="stylesheet" href="./assets/stylesheets/base.css">
-    <title>Résumé</title>
+    <meta charset="UTF-8" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135348958-1"></script>
     <script>
@@ -13,7 +12,6 @@
       gtag('js', new Date());
       gtag('config', 'UA-135348958-1');
     </script>
-    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="My very own personal website.">
     <meta name="google-site-verification" content="JSXHc5R4b0LTgmCgl1pO59m6T8NOPE4p3oEkQdx-cB8">
@@ -45,6 +43,7 @@
     <link rel="me" href="https://www.fb.com/hermankrav" type="text/html">
     <link rel="me" href="mailto:herman.kravchenko@gmail.com">
     <link rel="me" href="tel:+380935308893">
+    <link rel="stylesheet" href="./assets/stylesheets/base.css">
   </head>
   <body>
     <main>
@@ -178,7 +177,7 @@
                 <!-- Languages -->
                 <section>
                   <h3>Languages</h3>
-                  <p class="tags small">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span>&#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span>&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                  <p class="tags small">&#x1f1fa;&#x1f1e6; <span>УКРАЇНСЬКА</span>&#x1f1f7;&#x1f1fa; <span>РУССКИЙ</span>&#x1f1fa;&#x1f1f8; <span>ENGLISH</span></p>
                 </section>
                 <!-- Skills -->
                 <section>
