--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <!-- Wants -->
                 <section>
                   <h3>Wants&#x1f97a;</h3>
-                  <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY SCHEDULE</span><span class="tag">TO READ MORE</span><span class="tag">TO OPEN MY OWN IT COMPANY</span></p>
+                  <p class="tags small bulleted"><span class="tag">TO BE FIT AND HEALTHY</span><span class="tag">TO OWN MY SCHEDULE</span><span class="tag">TO READ MORE</span></p>
                 </section>
                 <!-- Education -->
                 <section>
