--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   </div>
                   <div class="sixteen wide column">
                     <!-- Intro -->
-                    <h2>Résumé</h2>
+                    <h2>Full-Stack Developer</h2>
                     <p>&mdash; Hello! I'm a full stack developer with a background in IT Security and Azure with 3 years experience. I graduated from LDS Business college with Cyber Security degree and Software Engineering degree from BYU Idaho in 2020. I strive to deliver high quality code and provide only best solutions to my customers which are priced right.</p>
                   </div>
                 </div>
